syntax = "proto3";
package ua.org.kug.raft;

option java_package = "ua.org.kug.raft";
option java_multiple_files = true;

message RaftRequest {
    string greeting = 1;
    int32 count = 2;
}

message RaftReply {
    string reply = 1;
}

message RequestVoteRPC {
    int32 term = 1;
    int32 candidateId = 2;
    int32 lastLogIndex = 3;
    int32 lastLogTerm = 4;
}

message ResponseVoteRPC {
    int32 term = 1;
    bool voteGranted = 2;
}

message RequestAppendEntriesRPC {
     message LogEntry {
        int32 term = 1;
        string command = 2;
     }
     int32 term = 1;
     int32 leaderId = 2;
     int32 prevLogIndex = 3;
     int32 prevLogTerm = 4;
     repeated LogEntry entries = 5;
     int32 leaderCommit = 6;
}

message ResponseAppendEntriesRPC {
    int32 term = 1;
    bool success = 2;
}

service Raft {
    rpc Vote (RequestVoteRPC) returns (ResponseVoteRPC);
    rpc Append (RequestAppendEntriesRPC) returns (ResponseAppendEntriesRPC);
}